--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -62,3 +62,124 @@
   /* background-color: #334; */
   transform: scale(1);
 }
+.header2 {
+  display: inline-block;
+  font-family: Oxygen;
+  font-size: 20px;
+  font-weight: bold;
+  color: #fafaff;
+  width: 50%;
+  padding-left: 100px;
+  padding-right: 100px;
+
+}
+.textinput {
+  width: calc(100% - 200px - 20px);
+  padding: 10px;
+  height: 20px;
+  margin-left: 100px;
+  margin-right: 100px;
+
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  font-family: Oxygen;
+  color: #1a1a2a;
+  
+  
+}
+
+.textarea {
+  width: 100%;
+  height: 150px;
+  margin-left: 100px;
+  margin-right: 100px;
+  padding: 10px;
+  
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  font-family: Oxygen;
+  color: #1a1a2a;
+  resize: none;
+}
+
+.button2 {
+  background-color: #fafaff;
+  color: #1a1a2a;
+  padding: 10px;
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-left: 100px;
+  margin-top: 20px;
+  margin-right: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: Oxygen;
+  font-size: 20px;
+}
+
+/* 👆 Hover effect */
+.button2:hover {
+  transform: scale(1.05);
+}
+
+/* 👇 Clicked (active) effect */
+.button2:active {
+  background-color: #ddd;
+  transform: scale(1);
+}
+
+/* Popup container */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
