added horizontal parallax pages and my 6/30 myria update

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
   cursor: pointer;
   font-family: monospace;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 20px;
   transition: transform 0.3s;
 }
 
@@ -113,6 +113,7 @@
   margin-left: 100px;
   margin-top: 20px;
   margin-right: 100px;
+  margin-bottom: 50px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -131,55 +132,27 @@
   transform: scale(1);
 }
 
-/* Popup container */
-.popup {
-  position: relative;
-  display: inline-block;
+.headerTab {
+    font-family: 'Monospace';
+    font-size: 20px;
+    color: #1a1a2a;
+    text-align: center;
+    padding: 10px;
+
+}
+
+.slopeBegin {
+  clip-path: polygon(0% 0%, 25% 0%, 10% 100%, 0% 100%);
+}
+
+.slopeEnd {
+  clip-path: polygon(80% 0, 100% 0, 85% 100%, 60% 100%);
+}
+
+.slopeBegin,
+.slopeEnd {
+  position: absolute;
+  width: 170%;
+  height: 100%;
   cursor: pointer;
-}
-
-/* The actual popup (appears on top) */
-.popup .popuptext {
-  visibility: hidden;
-  width: 160px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
-}
-
-/* Popup arrow */
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
 }
