--- a/src/App.css
+++ b/src/App.css
@@ -142,11 +142,11 @@
 }
 
 .slopeBegin {
-  clip-path: polygon(0% 0%, 25% 0%, 10% 100%, 0% 100%);
+  clip-path: polygon(0px 0px, 680px 0, 260px 100%, 0% 100%);
 }
 
 .slopeEnd {
-  clip-path: polygon(80% 0, 100% 0, 85% 100%, 60% 100%);
+  clip-path: polygon(1780px 0, 100% 0, 85% 100%, 1360px 100%);
 }
 
 .slopeBegin,
